--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
 <header>
-    <img src="gifs/bunny-cute.gif" alt="Menu" id="menuToggleButton" class="menu-toggle-gif">
+    <img src="gifs/hi.gif" alt="Menu" id="menuToggleButton" class="menu-toggle-gif">
     <h1>Boo's Poetic Peek-a-Boo </h1>
 </header>
 
