--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <header>
     <img src="gifs/bunny-cute.gif" alt="Menu" id="menuToggleButton" class="menu-toggle-gif">
     <h1>Boo's Poetic Peek-a-Boo </h1>
+    <img src="gifs/hello.gif" alt="Menu" class="peek">
 </header>
 
 <div class ="wrapper">
