--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                 <h2>When you are not feeling well</h2>
                 <p>My dearest, when I see you under the weather, it pains me as if I've committed the gravest of torts against you. Your rosy cheeks faded, your vibrant smile withdrawn - I feel I must make the most sincere of remedies. Like a dutiful counsel, I will argue fervently for your swift recovery. I'll present a robust case of tender loving care, seeking damages in the form of your returning radiance. Though your ailment may attempt to establish liability, I will robustly defend your right to good health. With medicine and soup as my prime exhibits, I shall make an impassioned plea of devotion until the jury of fatigue renders a verdict of convalescence. My love will stop at nothing to make the tortious bug depart and see your gorgeous glow righteously restored.</p>
             </div>
+            <!--
             <div id="section7" class="section">
                 <h2>When you are feeling happy</h2>
                 <p>When you're feeling truly happy, it's like a wonderful family reunion happening right before my eyes. Your brilliant smile welcomes pure joy into our loving embrace, as if it were our firstborn child. Every giggle and laugh strengthens the bonds of our loving family, creating a lasting legacy of delight. Just as families celebrate each new addition, so too does my heart multiply its reasons to rejoice whenever your cheery self shines through. In those radiant moments, the very core of my devotion enshrines your overflowing happiness as the crowning jewel of our life together. Your euphoric bliss becomes the centerpiece around which our domestic love revolves - a cause for eternal celebration within the warm circle of our family.</p>
@@ -79,7 +80,7 @@
             <div id="section10" class="section">
                 <h2>When you are feeling loved</h2>
                 <p>When you're feeling enveloped in love's warm embrace, it's like we're drafting the greatest constitution two hearts could ever create. Your radiant smile declares your undeniable rights to be cherished. The twinkle in your eyes amends our union's laws with new depths of passion. Each tender touch interprets our vows of forever onto your flushed skin. As we intertwine, our two separate constitutions merge into one nation - the Republic of Us. United in loving ratification, our hearts will forever uphold your loving bliss as the supreme law of our land. Under the shared glow of our affection, no higher decree could ever be ordained than my eternal devotion to keeping you loved.</p>
-            </div>
+            </div>-->
         </div>
     <div class = "dummy-right"></div>
 </div>
