--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
                 <h2>When you are not feeling well</h2>
                 <p>My dearest, when I see you under the weather, it pains me as if I've committed the gravest of torts against you. Your rosy cheeks faded, your vibrant smile withdrawn - I feel I must make the most sincere of remedies. Like a dutiful counsel, I will argue fervently for your swift recovery. I'll present a robust case of tender loving care, seeking damages in the form of your returning radiance. Though your ailment may attempt to establish liability, I will robustly defend your right to good health. With medicine and soup as my prime exhibits, I shall make an impassioned plea of devotion until the jury of fatigue renders a verdict of convalescence. My love will stop at nothing to make the tortious bug depart and see your gorgeous glow righteously restored.</p><img src ="gifs/cute-cat.gif" class="train-1"><img src ="gifs/chibi-cat-mochi-cat.gif" class="train-2" >
             </div>
-            <!--
             <div id="section7" class="section">
                 <h2>When you are feeling happy</h2>
-                <p>When you're feeling truly happy, it's like a wonderful family reunion happening right before my eyes. Your brilliant smile welcomes pure joy into our loving embrace, as if it were our firstborn child. Every giggle and laugh strengthens the bonds of our loving family, creating a lasting legacy of delight. Just as families celebrate each new addition, so too does my heart multiply its reasons to rejoice whenever your cheery self shines through. In those radiant moments, the very core of my devotion enshrines your overflowing happiness as the crowning jewel of our life together. Your euphoric bliss becomes the centerpiece around which our domestic love revolves - a cause for eternal celebration within the warm circle of our family.</p>
+                <p>When you're feeling truly happy, it's like a wonderful family reunion happening right before my eyes. Your brilliant smile welcomes pure joy into our loving embrace, as if it were our firstborn child. Every giggle and laugh strengthens the bonds of our loving family, creating a lasting legacy of delight. Just as families celebrate each new addition, so too does my heart multiply its reasons to rejoice whenever your cheery self shines through. In those radiant moments, the very core of my devotion enshrines your overflowing happiness as the crowning jewel of our life together. Your euphoric bliss becomes the centerpiece around which our domestic love revolves - a cause for eternal celebration within the warm circle of our family.</p><img src ="gifs/peach-goma-happy-side-to-side.gif" class="train-1"><img src ="gifs/tkthao219-peach.gif" class="train-2" >
             </div>
+            <!--
             <div id="section8" class="section">
                 <h2>When you are sad</h2>
                 <p>My darling, when I see those rain clouds of sadness drift across your beautiful face, it pains me like an environmental disaster. Your brilliant smile is the sunshine this world needs, and your frown is an oil spill on the delicate ecosystems of my heart. But just as environmental laws protect our fragile planet, my love will shelter you during these grey moments. I will be your conservation effort, nursing your spirit back to radiant bloom. We'll plant the seeds of joy and watch them flourish, letting your lovely laughter be the clean air that forces those storm clouds to part. My embrace will be your protected wetlands where you can make your nourishing retreat until your renewable happiness has been replenished. Then hand-in-hand, we'll stroll into your sunny future, admiring how resilient and beautiful your environmental soul has always been.</p>
@@ -87,7 +87,6 @@
 <script src="script.js"></script>
 </body>
 </html>
-
 
 
 
